// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartButton /> should not be visible with prop visible set to false 1`] = `
<button
  className="b-fa5400 fs-1p5rem lh-1 outline-0 p-0 min-width-0 w-0 overflow-hidden position-relative z-index-1 _1dmaw7o _1t1cq7e"
  onClick={[Function]}
  style={Object {}}
>
  <Ripple
    className="d-flex h-100P w-100P justify-content-center align-items-center c-fff"
    color="#000"
    fill={true}
    overflow={false}
    size={null}
  >
    <CartIcon />
    <CartButtonBadge
      className="position-absolute fs-0p75rem lh-1p4 fw-700 b-fff c-fa5400 border-radius-8 h-16 min-width-16 pl-4 pr-4 _d72c9q _1d9980o"
      productCount={0}
    />
  </Ripple>
</button>
`;

exports[`<CartButton /> should render with cartProductCount beeing set to 4 1`] = `
<button
  className="b-fa5400 fs-1p5rem lh-1 outline-0 p-0 min-width-0 w-0 overflow-hidden position-relative z-index-1 _1dmaw7o _1t1cq7e"
  onClick={[Function]}
  style={
    Object {
      "minWidth": 56,
      "transform": "translate3d(0, 0, 0)",
      "transitionDelay": "600ms",
    }
  }
>
  <Ripple
    className="d-flex h-100P w-100P justify-content-center align-items-center c-fff"
    color="#000"
    fill={true}
    overflow={false}
    size={null}
  >
    <CartIcon />
    <CartButtonBadge
      className="position-absolute fs-0p75rem lh-1p4 fw-700 b-fff c-fa5400 border-radius-8 h-16 min-width-16 pl-4 pr-4 _d72c9q _1d9980o"
      productCount={4}
    />
  </Ripple>
</button>
`;

exports[`<CartButton /> should show '99+' if the cart amount is higher 1`] = `
<button
  className="b-fa5400 fs-1p5rem lh-1 outline-0 p-0 min-width-0 w-0 overflow-hidden position-relative z-index-1 _1dmaw7o _1t1cq7e"
  onClick={[Function]}
  style={
    Object {
      "minWidth": 56,
      "transform": "translate3d(0, 0, 0)",
      "transitionDelay": "600ms",
    }
  }
>
  <Ripple
    className="d-flex h-100P w-100P justify-content-center align-items-center c-fff"
    color="#000"
    fill={true}
    overflow={false}
    size={null}
  >
    <CartIcon />
    <CartButtonBadge
      className="position-absolute fs-0p75rem lh-1p4 fw-700 b-fff c-fa5400 border-radius-8 h-16 min-width-16 pl-4 pr-4 _d72c9q _1d9980o"
      productCount={115}
    />
  </Ripple>
</button>
`;

exports[`<CartButton /> should transition if it has cart amount 1`] = `
<button
  className="b-fa5400 fs-1p5rem lh-1 outline-0 p-0 min-width-0 w-0 overflow-hidden position-relative z-index-1 _1dmaw7o _1t1cq7e"
  onClick={[Function]}
  style={
    Object {
      "minWidth": 56,
      "transform": "translate3d(0, 0, 0)",
      "transitionDelay": "600ms",
    }
  }
>
  <Ripple
    className="d-flex h-100P w-100P justify-content-center align-items-center c-fff"
    color="#000"
    fill={true}
    overflow={false}
    size={null}
  >
    <CartIcon />
    <CartButtonBadge
      className="position-absolute fs-0p75rem lh-1p4 fw-700 b-fff c-fa5400 border-radius-8 h-16 min-width-16 pl-4 pr-4 _d72c9q _1d9980o"
      productCount={5}
    />
  </Ripple>
</button>
`;
